--- a/i3/config
+++ b/i3/config
@@ -29,12 +29,9 @@ set $base0F #fcc09e
 
 
 # Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:monospace 8
-
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -141,7 +138,10 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace 10
 
 assign [class="Firefox"] $workspace3
+assign [class="Parole"]  $workspace9
 # reload the configuration file
+for_window [class="^.*"] border pixel 1
+new_window 1pixel
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
@@ -188,25 +188,7 @@ bindsym $mod+Shift+x exec i3lock
   client.urgent           $base02 $base08    $base00 $base0F
 
 
-bar {
-        status_command i3blocks -c ~/.config/i3/i3blocks.conf
 
-	font pango: System San Francisco Display, FontAwesome 11
-        position top
-        strip_workspace_numbers yes
-        #bindsym button4 nop
-        #bindsym button5 nop
-        colors {
-              separator $base03
-              background $base01
-              statusline $base05
-#                        border  background text
-              focused_workspace  $base01 $base01    $base07
-              active_workspace   $base01 $base02    $base03
-              inactive_workspace $base01 $base01    $base03
-              urgent_workspace   $base01 $base01    $base08
-    }
-}
 
 # Pulse Audio controls
 bindsym F11 exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -222,4 +204,7 @@ bindsym F7 exec playerctl play
 bindsym $mod+F7 exec playerctl pause
 bindsym F8 exec playerctl next
 bindsym F6 exec playerctl previous
+exec_always --no-startup-id /home/csjojo/.config/polybar/launch.sh 
 exec_always compton -f
+font pango:DejaVu Sans Mono 8
+
