Rebase of dotfiles

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -332,12 +332,12 @@ fg-alt = #141C21
 
 alpha = #00000000
 
-shade1 = #1976D2
-shade2 = #1E88E5
-shade3 = #2196F3
-shade4 = #42A5F5
-shade5 = #64B5F6
-shade6 = #90CAF9
+shade1 = #512DA8
+shade2 = #5E35B1
+shade3 = #673AB7
+shade4 = #7E57C2
+shade5 = #9575CD
+shade6 = #B39DDB
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
@@ -351,8 +351,8 @@ shade6 = #90CAF9
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/alsa]
-type = internal/alsa
+[module/pactl]
+type = internal/pactl
 
 format-volume = <ramp-volume> <label-volume>
 format-volume-background = ${color.shade4}
