--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -32,7 +32,6 @@ set $base0F #fcc09e
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 font pango:DejaVu Sans Mono 8
-
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -42,9 +41,10 @@ font pango:DejaVu Sans Mono 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
-
+# You can also use any non-zero value if you'd like to have a border
+for_window [class=".*"] border pixel 0
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal 
+bindsym $mod+Return exec xfce4-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -107,17 +107,19 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+hide_edge_borders vertical
 hide_edge_borders both
 set $workspace1 "1: Desk"
 set $workspace2 "2: Terminal"
 set $workspace3 "3: FireFox"
+set $workspace4 "4: Discord"
 set $workspace9 "9: Chill"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1 
 bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace 4
+bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
@@ -139,6 +141,7 @@ bindsym $mod+Shift+0 move container to workspace 10
 
 assign [class="Firefox"] $workspace3
 assign [class="Parole"]  $workspace9
+assign [class="discord"] $workspace4
 # reload the configuration file
 for_window [class="^.*"] border pixel 1
 new_window 1pixel
@@ -194,10 +197,10 @@ bindsym $mod+Shift+x exec i3lock
 bindsym F11 exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym F10 exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym F9 exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-
-bindsym $mod+F10 exec xbacklight -inc 20 # increase screen brightness
-bindsym $mod+F11 exec xbacklight -dec 20 # decrease screen brightness
-
+bindsym F4 exec --no-startup-id amixer -D pulse sset Capture toggle
+bindsym $mod+F11 exec xbacklight -inc 20 # increase screen brightness
+bindsym $mod+F10 exec xbacklight -dec 20 # decrease screen brightness
+bindsym F12 exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures/'
 
 # Media player controls
 bindsym F7 exec playerctl play
@@ -206,5 +209,4 @@ bindsym F8 exec playerctl next
 bindsym F6 exec playerctl previous
 exec_always --no-startup-id /home/csjojo/.config/polybar/launch.sh 
 exec_always compton -f
-font pango:DejaVu Sans Mono 8
-
+exec --no-startup-id feh --bg-fill ~/Pictures/wallpaper.jpg
