--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -351,8 +351,8 @@ shade6 = #B39DDB
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/pactl]
-type = internal/pactl
+[module/alsa]
+type = internal/alsa
 
 format-volume = <ramp-volume> <label-volume>
 format-volume-background = ${color.shade4}
