--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -200,10 +200,11 @@ bindsym $mod+F10 exec xbacklight -dec 20 # decrease screen brightness
 bindsym F12 exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures/'
 
 # Media player controls
-bindsym F7 exec playerctl play
-bindsym $mod+F7 exec playerctl pause
-bindsym F8 exec playerctl next
-bindsym F6 exec playerctl previous
+bindsym F7 exec parole --play
+bindsym $mod+F7 exec parole --pause
+bindsym F8 exec parole --next
+bindsym F6 exec parole --previous
+
 exec_always --no-startup-id /home/csjojo/.config/polybar/launch.sh 
 exec_always compton -f
 exec --no-startup-id feh --bg-fill ~/Pictures/wallpaper.jpg
