--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,6 +54,9 @@ set -sg escape-time 0
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
+
 #set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
