--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -138,7 +138,7 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace 10
 
-assign [class="brave-browser"] $workspace3
+assign [class="Brave-browser"] $workspace3
 assign [class="Parole"]  $workspace9
 assign [class="discord"] $workspace4
 assign [class="vlc"] $workspace4
