--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -211,3 +211,4 @@ exec_always compton -f
 exec --no-startup-id feh --bg-fill ~/Pictures/wallpaper.jpg
 exec_always --no-startup-id safeeyes
 exec_always --no-startup-id redshift
+exec ~/Downloads/software test/activitywatch/aw-qt
